# fastapi-cerbos-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json  docker-compose.yaml  env.example  pyproject.toml  ruff.toml
cerbos/: cerbos.yaml
docker/: Dockerfile
src/: main.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  env.example  pyproject.toml  runserver.py
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/authz/policies/: users.yaml
{{cookiecutter.project_slug}}/docker/: docker-entrypoint.sh
{{cookiecutter.project_slug}}/scripts/: create_normal_user.py
{{cookiecutter.project_slug}}/src/authentication/: router.py  schemas.py
{{cookiecutter.project_slug}}/src/authentication/services/: authentication.py  mfa.py
{{cookiecutter.project_slug}}/src/core/: config.py  constants.py
{{cookiecutter.project_slug}}/src/core/event_handlers/: lifespan.py
{{cookiecutter.project_slug}}/src/core/helpers/: email.py  redis.py  ses.py
{{cookiecutter.project_slug}}/src/core/middlewares/: request_response_timing.py
{{cookiecutter.project_slug}}/src/core/permissions/: dependencies.py
{{cookiecutter.project_slug}}/src/core/routers/: health.py
{{cookiecutter.project_slug}}/src/core/security/: dependencies.py  exceptions.py
{{cookiecutter.project_slug}}/src/database/: base.py  session.py
{{cookiecutter.project_slug}}/src/notifications/email/: base.py
{{cookiecutter.project_slug}}/src/users/: crud.py  exceptions.py  models.py  router.py
{{cookiecutter.project_slug}}/src/users/jobs/: preload_blacklisted_tokens.py
(+28 files in other folders)
